BECOME an Artist with just One patch endpoint for upsert artist profile
